fix: copyright wrap

--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -101,6 +101,7 @@
         margin 5px 0
         a
           text-decoration underline !important
+          word-wrap break-word
     .donate
       display block
       text-align center
